--- a/app/views/teachers/users/show.html.slim
+++ b/app/views/teachers/users/show.html.slim
@@ -3,7 +3,7 @@ h4
 
 .col-md-4#description_section
     p
-      = t '.user_name'
+      = t '.name'
       b
         = @user.full_name
     br
@@ -37,4 +37,4 @@ h4
 
 .col-md-12
   br
-  = link_to t('.buttons.back'), :back
+  = link_to t('buttons.back'), :back
