add breadcrumb(gem gretel)
add breadcrumb(gem gretel)

--- a/app/assets/stylesheets/admin/student.scss
+++ b/app/assets/stylesheets/admin/student.scss
@@ -8,3 +8,14 @@
   position:relative;
   left:40%;
 }
+
+.select-user-category-id, #b_registration {
+  font-family: Arial;
+  font-weight: bold;
+  font-size: 16px;
+  color: White;
+  background: #5bc0de;
+  border: Black;
+  height: 40px;
+  width: 192.5px;
+}
