--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -198,3 +198,21 @@ footer {
   font-size: 12px;
   font-weight: bold;
 }
+
+.breadcrumb {
+  background-color: #d9edf7;
+
+  .active{
+    color: #0071B5;
+  }
+
+  li + li:before {
+    color: #0071B5;
+  }
+
+  .pretext{
+    color: #0071B5;
+  }
+}
+
+
