--- a/app/views/admin/students/edit.html.slim
+++ b/app/views/admin/students/edit.html.slim
@@ -1,16 +1,17 @@
-.col-md-12
-  h3
-    = t('.h_edit')
+- breadcrumb :admin_students_edit
 
-.col-md-3
-  = form_for(@user, url: admin_student_path(@user), html: {class: "admin-edit-student", method: "patch"}) do |f|
-    - if @user.errors.any?
-        #error_explanation
-          h4
-            = t('errors.messages.not_saved', count: @user.errors.count, resource: User.model_name.human)
-          ul
-            - @user.errors.full_messages.each do |msg|
-              li= msg
+h3
+  = t('.h_edit')
+
+= form_for(@user, url: admin_student_path(@user), html: {class: "admin-edit-student", method: "patch"}) do |f|
+  - if @user.errors.any?
+      #error_explanation
+        h4
+          = t('errors.messages.not_saved', count: @user.errors.count, resource: User.model_name.human)
+        ul
+          - @user.errors.full_messages.each do |msg|
+            li= msg
+  .col-md-3
     .form-group
       = f.label :full_name
       = f.text_field :full_name, autofocus: true, class: 'form-control'
@@ -21,7 +22,7 @@
     .form-group
       = f.label :categgory_id
       br
-      = f.collection_select :categgory_id, Categgory.all, :id, :name, class: 'form-control'
+      = f.collection_select :categgory_id, Categgory.all, :id, :name, {}, {:class => 'select-user-category-id'}
 
     .actions
       br
