--- a/app/views/admin/students/index.html.slim
+++ b/app/views/admin/students/index.html.slim
@@ -1,6 +1,7 @@
-.col-md-12
-  h3
-    = t('.h_students')
+- breadcrumb :admin_students
+
+h3
+  = t('.h_students')
 
 #partial_admin_students
   = render partial: 'students'
