--- a/app/views/admin/tidings/index.html.slim
+++ b/app/views/admin/tidings/index.html.slim
@@ -1,6 +1,7 @@
-.col-md-12
-  h3
-    = t('.h_news_list')
+- breadcrumb :admin_tidings
+
+h3
+  = t('.h_news_list')
 
 #partial-news
   = render partial: 'tidings'
