--- a/app/views/teachers/test_settings/edit.html.slim
+++ b/app/views/teachers/test_settings/edit.html.slim
@@ -1,9 +1,9 @@
+- breadcrumb :teachers_test_settings_show_edit, @test_setting
+
 h3
   = t '.h_test_editing'
 
 = render 'form'
 
 .col-md-9#b-back-test-setting-new
-  = link_to t('buttons.show'), teachers_test_setting_path
-  br
   = link_to t('buttons.back'), teachers_test_settings_path
