--- a/app/views/admin/users/index.html.slim
+++ b/app/views/admin/users/index.html.slim
@@ -1,6 +1,7 @@
-.col-md-12
-  h3
-    = t('.h_teachers')
+- breadcrumb :admin_teachers
+
+h3
+  = t('.h_teachers')
 
 #partial_admin_teachers
   = render partial: 'users'
