--- a/app/views/comments/new.html.slim
+++ b/app/views/comments/new.html.slim
@@ -1,3 +1,5 @@
+- breadcrumb :comments_new
+
 h3
   = t '.h_add_suggestions'
 
@@ -5,4 +7,5 @@ h3
   = render 'form'
 
 .col-md-8
+  br
   = link_to t('buttons.back'), root_path
