--- a/app/views/teachers/test_settings/show.html.slim
+++ b/app/views/teachers/test_settings/show.html.slim
@@ -1,31 +1,33 @@
-.col-md-11
-  h3
-    = t '.h_testing'
+- breadcrumb :teachers_test_settings_show, @test_setting
 
-  .col-md-6#description_section
-    p
-      = t '.testing_theme'
-      b
-        = @test_setting.name
-    br
-    p
-      = t '.testing_description'
-      = @test_setting.description
-    br
-    p
-      = t '.testing_time_to_pass'
-      = @test_setting.time_to_pass
-      = t '.seconds'
-    br
-    p
-      = t '.testing_max_tried_count'
-      = @test_setting.max_tried_count
-    br
+h3
+  = t '.h_testing'
 
+.col-md-6#description_section
+  p
+    = t '.testing_theme'
+    b
+      = @test_setting.name
+  br
+  p
+    = t '.testing_description'
+    = @test_setting.description
+  br
+  p
+    = t '.testing_time_to_pass'
+    = @test_setting.time_to_pass
+    = t '.seconds'
+  br
+  p
+    = t '.testing_max_tried_count'
+    = @test_setting.max_tried_count
+  br
+
+- if @users.present?
   .col-md-12#test_results_partial
     = render 'test_results'
 
-  .col-md-12#b_back_test_setting_show
-    = link_to t('buttons.edit'), edit_teachers_test_setting_path
-    br
-    = link_to t('buttons.back'), teachers_test_settings_path
+.col-md-12#b_back_test_setting_show
+  = link_to t('buttons.edit'), edit_teachers_test_setting_path
+  br
+  = link_to t('buttons.back'), teachers_test_settings_path
