--- a/app/views/welcome/_carousel.html.slim
+++ b/app/views/welcome/_carousel.html.slim
@@ -8,7 +8,8 @@
       .item
         = link_to image_tag(img.photo.url(:big)), {class: "img-responsive"}
 
-  a.left.carousel-control data-slide="prev" href="#myCarousel" role="button"
-    i.fa.fa-chevron-left.fa-2x#carusel-link-left
-  a.right.carousel-control data-slide="next" href="#myCarousel" role="button"
-    i.fa.fa-chevron-right.fa-2x#carusel-link-right
+  - if check_if_number_of_imag_more_than_one(@images.count)
+    a.left.carousel-control data-slide="prev" href="#myCarousel" role="button"
+      i.fa.fa-chevron-left.fa-2x#carusel-link-left
+    a.right.carousel-control data-slide="next" href="#myCarousel" role="button"
+      i.fa.fa-chevron-right.fa-2x#carusel-link-right
