install gems and some general improves

--- a/app/views/students/test_settings/show.html.slim
+++ b/app/views/students/test_settings/show.html.slim
@@ -23,7 +23,7 @@
     br
     p
       = t '.you_have_attempting'
-      = @test_setting.max_tried_count - @attempts_number.count
+      = @test_setting.max_tried_count - @attempts_number
 
   #section_with_files_and_video
     .col-md-10
@@ -48,7 +48,7 @@
       hr
 
     .col-md-8
-      - if @test_setting.max_tried_count > @attempts_number.count
+      - if @test_setting.max_tried_count > @attempts_number
         = button_to t('.buttons.pass_test'), new_students_test_setting_test_path(@test_setting), method: "get", id: "button_pass_test"
       - else
         #you_couldnt_try
