registration feature spec

--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -27,7 +27,7 @@ input.carrier {
   width: 175px;
 }
 
-#b_registration {
+#b_registration, #b_teacher_registration {
   height: 35px;
   width: 175px;
   font-weight: bold;
