--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -46,10 +46,10 @@ ul.nav.nav-tabs
       .col-md-2
         .field
           = f.label :full_name
-          = f.text_field :full_name, autofocus: true
+          = f.text_field :full_name, autofocus: true, id: "teacher_full_name"
         .field
           = f.label :email
-          = f.email_field :email
+          = f.email_field :email, id: "teacher_email"
         .field
           = f.label :subject_id
           = f.collection_select :subject_id, Subject.all, :id, :name
@@ -59,11 +59,11 @@ ul.nav.nav-tabs
           - if @validatable
             em
               | (мінімум #{@minimum_password_length} символів)
-          = f.password_field :password, autocomplete: "off"
+          = f.password_field :password, autocomplete: "off", id: "teacher_password"
         .field
           = f.label :password_confirmation
           br
-          = f.password_field :password_confirmation, autocomplete: "off"
+          = f.password_field :password_confirmation, autocomplete: "off", id: "teacher_password_confirm"
         .field
           b
             = t('.choose_avatar')
@@ -73,7 +73,7 @@ ul.nav.nav-tabs
               = img.file_field :photo
         br
         .actions
-          = f.submit t('buttons.submit'), class: "btn btn-info", id: "b_registration"
+          = f.submit t('buttons.submit'), class: "btn btn-info", id: "b_teacher_registration"
         br
         = render "devise/shared/links"
         = link_to t('buttons.back'), :back
